--- a/CHIP8Emulator/MainWindow.xaml
+++ b/CHIP8Emulator/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CHIP8Emulator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="256" Width="512">
     <Grid>
-        
+        <Canvas x:Name="MainCanvas"></Canvas>
     </Grid>
 </Window>
